Table icons alignment fix
WC

--- a/src/components/common/Common.module.css
+++ b/src/components/common/Common.module.css
@@ -1423,11 +1423,9 @@
 } */
 
 .tableIcons {
-    border: none !important;
-    padding: 0px !important;
-    box-shadow: none;
-    width: 20px !important;
-    margin-right: 8px;
+    border: none;
+    padding: 0;
+    width: 20px;
 }
 
 /* .searchContainer {
